// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Dropdown default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "300px",
        }
      }
    >
      <div
        actions={Object {}}
        className="bx--dropdown__wrapper bx--list-box__wrapper"
        footer={null}
        hasIconOnly={false}
      >
        <label
          className="bx--label"
          htmlFor="downshift-8-toggle-button"
          id="downshift-8-label"
        >
          Dropdown label
        </label>
        <div
          aria-label="Dropdown"
          className="bx--dropdown bx--list-box"
          id="carbon-dropdown-example"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby="downshift-8-label downshift-8-toggle-button"
            className="bx--list-box__field"
            disabled={false}
            id="downshift-8-toggle-button"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className="bx--list-box__label"
            >
              Dropdown menu options
            </span>
            <div
              className="bx--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height={16}
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-8-label"
            className="bx--list-box__menu"
            id="downshift-8-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          />
        </div>
        <div
          className="bx--form__helper-text"
        >
          This is some helper text.
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Dropdown with icons and labels 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "300px",
        }
      }
    >
      <div
        actions={Object {}}
        className="bx--dropdown__wrapper bx--list-box__wrapper"
        footer={null}
        hasIconOnly={false}
      >
        <label
          className="bx--label"
          htmlFor="downshift-9-toggle-button"
          id="downshift-9-label"
        >
          Dropdown label
        </label>
        <div
          aria-label="Dropdown"
          className="bx--dropdown bx--list-box"
          id="carbon-dropdown-example"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby="downshift-9-label downshift-9-toggle-button"
            className="bx--list-box__field"
            disabled={false}
            id="downshift-9-toggle-button"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className="bx--list-box__label"
            >
              Dropdown menu options
            </span>
            <div
              className="bx--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height={16}
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-9-label"
            className="bx--list-box__menu"
            id="downshift-9-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          />
        </div>
        <div
          className="bx--form__helper-text"
        >
          This is some helper text.
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Dropdown with icons only 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "300px",
        }
      }
    >
      <div
        actions={Object {}}
        className="bx--dropdown__wrapper bx--list-box__wrapper"
        footer={null}
        hasIconOnly={false}
      >
        <label
          className="bx--label"
          htmlFor="downshift-10-toggle-button"
          id="downshift-10-label"
        >
          Dropdown label
        </label>
        <div
          aria-label="Dropdown"
          className="bx--dropdown iot--dropdown__selection-buttons bx--list-box"
          id="carbon-dropdown-example"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby="downshift-10-label downshift-10-toggle-button"
            className="bx--list-box__field"
            disabled={false}
            id="downshift-10-toggle-button"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className="bx--list-box__label"
            >
              Dropdown menu options
            </span>
            <div
              className="bx--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height={16}
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-10-label"
            className="bx--list-box__menu"
            id="downshift-10-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          />
        </div>
        <div
          className="bx--form__helper-text"
        >
          This is some helper text.
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
